--- a/getHelp.html
+++ b/getHelp.html
@@ -21,27 +21,29 @@ body {font-family: "Lato", sans-serif}
 <!-- Navbar -->
 <div class="m3-top">
   <div class="m3-bar m3-amber m3-card">
-    <a class="m3-bar-item m3-button m3-padding-large m3-hide-medium m3-hide-large m3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="index.html" class="m3-bar-item m3-button m3-padding-large m3-hide-small ">HOME</a>
+    <a class="m3-bar-item m3-button m3-padding-large m3-hide-medium m3-hide-large m3-right"
+      href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="index.html" class="m3-bar-item m3-button m3-padding-large m3-hide-small m3-hover-red">HOME</a>
     <a href="index.html#contact" class="m3-bar-item m3-button m3-padding-large m3-hide-small">CONTACT</a>
+    <a href="index.html#media" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">MEDIA</a>
+    <a href="index.html#donations" class="m3-bar-item m3-button m3-padding-large"
+      onclick="myFunction()">DONATIONS</a>
+    <a href="index.html#masks" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">MASKS</a>
     <div class="m3-dropdown-hover m3-hide-small">
-      <button class="m3-padding-large m3-button m3-hover-red" title="More"><a href =getHelp.html>GET HELP</a><i class="fa fa-caret-down"></i></button>     
+      <button class="m3-padding-large m3-button " title="More"><a href=getHelp.html>GET HELP</a><i
+          class="fa fa-caret-down"></i></button>
       <div class="m3-dropdown-content m3-bar-block m3-card-4">
         <a href="getHelp.html#MedAtt" class="m3-bar-item m3-button">Get Medical Attention</a>
         <a href="getHelp.html#QuarUrself" class="m3-bar-item m3-button">Quarantine Yourself</a>
-        
+
       </div>
     </div>
-    <a href ="index.html" class="m3-bar-itemR m3-button m3-padding-large"><img src="trans.png" height="30" width="30"></a>
-    
+
+
+    <a href="index.html" class="m3-bar-itemR m3-button m3-padding-large m3-hide-medium"><img src="trans.png"
+        height="30" width="30"></a>
+
   </div>
-</div>
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="m3-bar-block m3-black m3-hide m3-hide-large m3-hide-medium m3-top" style="margin-top:46px">
-  <a href="index.html" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">HOME</a>
-  
-  <a href="index.html#contact" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">CONTACT</a>
-  <a href="getHelp.html" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">GET HELP</a>
 </div>
 <!-- Page content -->
 <div class="m3-content" style="max-width:2000px;margin-top:46px;background-color: black;">
@@ -109,7 +111,8 @@ body {font-family: "Lato", sans-serif}
 
 <!-- End Page Content -->
 </div>
-
+<!-- Footer -->
+<img src="NY.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <!-- Footer -->
 <footer class="m3-container m3-padding-64 m3-center m3-opacity m3-light-grey m3-jumbo">
