--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <div class="m3-bar m3-amber m3-card">
         <a class="m3-bar-item m3-button m3-padding-large m3-hide-medium m3-hide-large m3-right"
           href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="index.html" class="m3-bar-item m3-button m3-padding-large m3-hide-small m3-hover-red">HOME</a>
-        <a href="index.html#contact" class="m3-bar-item m3-button m3-padding-large m3-hide-small">CONTACT</a>
-        <a href="index.html#media" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">MEDIA</a>
-        <a href="index.html#donations" class="m3-bar-item m3-button m3-padding-large"
+        <a href="#" class="m3-bar-item m3-button m3-padding-large m3-hide-small m3-hover-red">HOME</a>
+        <a href="#contact" class="m3-bar-item m3-button m3-padding-large m3-hide-small">CONTACT</a>
+        <a href="#media" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">MEDIA</a>
+        <a href="#donations" class="m3-bar-item m3-button m3-padding-large"
           onclick="myFunction()">DONATIONS</a>
-        <a href="index.html#masks" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">MASKS</a>
+        <a href="#masks" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">MASKS</a>
         <div class="m3-dropdown-hover m3-hide-small">
           <button class="m3-padding-large m3-button " title="More"><a href=getHelp.html>GET HELP</a><i
               class="fa fa-caret-down"></i></button>
@@ -65,28 +65,21 @@
     </div>
 
     <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-    <div id="navDemo" class="m3-bar-block m3-black m3-hide m3-hide-large m3-hide-medium m3-top" style="margin-top:46px">
-      <a href="index.html" class="m3-bar-item m3-button m3-padding-large m3-hover-red" onclick="myFunction()">HOME</a>
-      <a href="index.html#media" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">MEDIA</a>
-      <a href="index.html#donations" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">DONATIONS</a>
-      <a href="index.html#masks" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">MASKS</a>
-      <a href="index.html#contact" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">CONTACT</a>
-      <a href="getHelp.html" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">GET HELP</a>
-      <a href="index.html" class="m3-bar-itemR m3-button m3-padding-large m3-hide-medium"><img src="trans.png"
-          height="30" width="30"></a>
-
-    </div>
-
+<div id="navDemo" class="m3-bar-block m3-black m3-hide m3-hide-large m3-hide-medium m3-top" style="margin-top:46px">
+  <a href="#band" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">BAND</a>
+  <a href="#tour" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">TOUR</a>
+  <a href="#contact" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">CONTACT</a>
+  <a href="#" class="m3-bar-item m3-button m3-padding-large" onclick="myFunction()">MERCH</a>
+</div>
 
     <!-- Page content -->
     <div class="m3-content" style="max-width:2000px;margin-top:46px;background-color: black;">
-      <div class="m3-content m3-center m3-padding-32">
-        <img src="trans.png" width="20%" height="20%">
-      </div>
+      
     </div>
 
 
 
+    <img src="banner.png" class="w3-image w3-greyscale-min" style="width:100%">
     <div class="m3-text-white m3-center m3-xxlarge m3-padding-32" id="donations">Donations</div>
     <div class="slideshow-container">
 
@@ -100,7 +93,7 @@
 
       <a href="https://www.feedingamerica.org/take-action/coronavirus">
         <div class="mySlides2 m3-center">
-          <img src="FOOD.jpg" style="width:40%">
+          <img src="FOOD.png" style="width:40%">
           <div class="m3-text-white m3-center m3-large m3-padding-32">Donate to Feeding America</div>
         </div>
       </a>
@@ -472,7 +465,7 @@
 
 
     <!-- Footer -->
-
+    <img src="NY.jpg" class="w3-image w3-greyscale-min" style="width:100%">
     <!-- Footer -->
     <footer class="m3-container m3-padding-64 m3-center m3-opacity m3-light-grey m3-jumbo">
       <a href="https://www.instagram.com/covid.cases/"><i class="fa fa-instagram m3-hover-opacity"></i></i></a>
