--- a/index.html
+++ b/index.html
@@ -439,6 +439,20 @@
       <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
     </div>
 
+    <!-- The Submission Section -->
+    <div class="m3-container m3-content m3-padding-64" style="max-width:800px" id="contact">
+      <h2 class="m3-wide m3-center m3-text-white">SUBMIT ARTWORK</h2>
+      <p class="m3-opacity m3-center m3-text-white"><i>Send some artwork to be featured on our website and our Instagram!</i></p>
+      <p class="m3-opacity m3-center m3-text-white"><i> You can submit anything from masks to posters and T-Shirt designs related to Covid-19!</i></p>
+      <div class=" m3-padding-32">
+        <div class=" m3-large m3-margin-bottom">
+          <center><i class="fa fa-envelope m3-text-white" style="width:100px"> </i>
+            <div class="m3-text-white">Email: covidcases.contact@gmail.com</div>
+          </center>
+        </div>
+      </div>
+    </div>
+
 
 
 
@@ -448,7 +462,7 @@
 
 
     <!-- The Contact Section -->
-    <div class="m3-container m3-content m3-padding-64" style="max-width:800px" id="contact">
+    <div class="m3-container m3-content m3-padding-16" style="max-width:800px" id="contact">
       <h2 class="m3-wide m3-center m3-text-white">CONTACT</h2>
       <p class="m3-opacity m3-center m3-text-white"><i>Have Questions? Drop a question!</i></p>
       <div class=" m3-padding-32">
